...
        return tabBarController
    }

    static func tabs(usingSubmodules submodules: Submodules) -> MainTabs {
        let setsTabBarItem =  createTabItem(title: "sets", tabImage: UIImage(systemName: "circle.grid.3x3.circle")!)
        let moneyTabBarItem =  createTabItem(title: "stats", tabImage: UIImage(systemName: "dollarsign.circle.fill")!)
        let settingsTabBarItem = createTabItem(title: "settings", tabImage: UIImage(systemName: "gear")!)

        submodules.sets.tabBarItem = setsTabBarItem
        submodules.stats.tabBarItem = moneyTabBarItem
        submodules.settingsPage.tabBarItem = settingsTabBarItem

        return (
...
