...
    lazy var switchControl: UISwitch = {
        let switchControl = UISwitch()
        switchControl.isOn = false
        switchControl.onTintColor = .green
        switchControl.translatesAutoresizingMaskIntoConstraints = false
        switchControl.addTarget(self, action: #selector(handleSwitchAction), for: .valueChanged)
        switchControl.accessibilityIdentifier = "toggle"
        return switchControl
    }()

    static let reuseidentifier = "SettingTableViewCell"
    @IBOutlet private weak var iconImageView: UIImageView!
    @IBOutlet private weak var settingsLabel: UILabel!
...
