...
    let LRD: Double
    let CVE: Double
    let DJF: Double
    let SCR: Double
    let SOS: Double
    let GMD: Double
    let KMF: Double
    let STD: Double
    let XRP: Double
    let AUD: Double
    let BGN: Double
    let BTC: Double
    let JOD: Double
...
